feat: smpp余额查询成功

--- a/开发文档/状态.md
+++ b/开发文档/状态.md
@@ -386,3 +386,189 @@ class DynamicStatusMappingService {
 - 维护完整的状态码映射文档
 - 对于新添加的渠道，建立状态码映射审核流程
 - 定期审查映射规则的有效性
+
+src/sms-provider/buka
+src/sms-channel-config
+
+# 状态映射问题分析与改进建议
+
+## 当前存在的问题
+
+### 1. 状态映射不一致
+
+目前在不同服务中对 Buka 状态码的映射存在不一致：
+
+```typescript
+// BukaSmsChannelService 中的映射
+case '0':  status = 'delivered';   // 成功送达
+case '1':  status = 'submitted';   // 已提交
+case '-1': status = 'failed';      // 失败
+
+// BukaService 中的映射
+case '0':  status = 'delivered';   // 成功
+case '-1': status = 'sending';     // 发送中
+case '1':  status = 'failed';      // 失败
+```
+
+这种不一致会导致：
+
+- 同一状态码在不同服务中有不同解释
+- 状态流转逻辑混乱
+- 难以追踪消息真实状态
+
+### 2. 缺乏统一的状态映射层
+
+- 状态映射逻辑分散在多个服务中
+- 没有统一的状态转换策略
+- 缺乏状态映射的版本控制和更新机制
+
+### 3. 错误码处理不完整
+
+- 文档定义了完整的错误状态（-1 到 -28）
+- 代码中只处理了基本的几个状态
+- 缺少详细的错误原因映射
+- 没有统一的错误处理策略
+
+## 改进建议
+
+### 1. 创建统一的状态映射服务
+
+```typescript
+@Injectable()
+export class BukaStatusMappingService {
+  // 映射到标准状态
+  mapToStandardStatus(bukaStatus: string): SmsStatus {
+    const statusMapping: Record<string, SmsStatus> = {
+      '0': 'delivered', // 成功送达
+      '1': 'submitted', // 已提交给服务商
+      '-1': 'failed', // 发送失败
+      // ... 其他状态映射
+    };
+    return statusMapping[bukaStatus] || 'unknown';
+  }
+
+  // 映射错误状态
+  mapToErrorStatus(bukaErrorCode: string): SmsStatus {
+    const errorMapping: Record<string, SmsStatus> = {
+      '-1': 'failed', // 认证错误
+      '-2': 'failed', // IP访问受限
+      '-3': 'rejected', // 内容敏感
+      '-4': 'rejected', // 内容为空
+      // ... 其他错误映射
+    };
+    return errorMapping[bukaErrorCode] || 'failed';
+  }
+}
+```
+
+### 2. 完善错误码映射
+
+```typescript
+const BukaErrorStatusMapping = {
+  '-1': {
+    status: 'failed',
+    reason: '认证错误',
+    action: '检查认证信息是否正确',
+  },
+  '-2': {
+    status: 'failed',
+    reason: 'IP访问受限',
+    action: '确认IP是否在白名单中',
+  },
+  '-3': {
+    status: 'rejected',
+    reason: '短信内容含有敏感字符',
+    action: '检查并修改敏感内容',
+  },
+  // ... 其他错误码映射
+};
+```
+
+### 3. 统一状态定义
+
+```typescript
+export interface StandardizedStatus {
+  status: SmsStatus; // 标准状态
+  detail: {
+    originalCode: string; // 原始状态码
+    message: string; // 状态描述
+    timestamp: Date; // 状态更新时间
+    channel: string; // 渠道标识
+    errorDetails?: {
+      // 错误详情（如果有）
+      code: string;
+      reason: string;
+      suggestedAction: string;
+    };
+  };
+}
+```
+
+### 4. 实现状态转换中间层
+
+```typescript
+@Injectable()
+export class StatusTransformationService {
+  constructor(
+    private readonly statusMappingService: BukaStatusMappingService,
+  ) {}
+
+  // 转换 Buka 响应到标准状态
+  transformBukaStatus(bukaResponse: BukaApiResponse): StandardizedStatus {
+    const standardStatus = this.statusMappingService.mapToStandardStatus(
+      bukaResponse.status,
+    );
+
+    return {
+      status: standardStatus,
+      detail: {
+        originalCode: bukaResponse.status,
+        message: getBukaStatusMessage(bukaResponse.status),
+        timestamp: new Date(),
+        channel: 'buka',
+        errorDetails:
+          bukaResponse.status !== '0'
+            ? {
+                code: bukaResponse.status,
+                reason: getBukaStatusMessage(bukaResponse.status),
+                suggestedAction: this.getSuggestedAction(bukaResponse.status),
+              }
+            : undefined,
+      },
+    };
+  }
+
+  // 获取建议操作
+  private getSuggestedAction(statusCode: string): string {
+    return BukaErrorStatusMapping[statusCode]?.action || '联系技术支持';
+  }
+}
+```
+
+## 实施建议
+
+1. **分阶段实施**
+
+   - 首先实现统一的状态映射服务
+   - 然后逐步替换现有代码中的状态映射逻辑
+   - 最后实现完整的状态转换中间层
+
+2. **代码重构步骤**
+
+   - 创建新的状态映射模块
+   - 编写单元测试确保映射正确性
+   - 逐步迁移现有代码
+   - 保持向后兼容
+
+3. **监控与维护**
+
+   - 添加状态映射日志
+   - 监控状态转换异常
+   - 定期审查状态映射规则
+   - 建立状态码更新机制
+
+4. **文档维护**
+   - 及时更新状态码文档
+   - 记录状态映射变更历史
+   - 提供状态码查询工具
+   - 维护最佳实践指南
